# prism-ole-handler

./: .gitignore  .pypirc  CLAUDE.md  README.md  extract_prism.py  insert_prism.py  ole_builder.py  pyproject.toml  requirements.txt  setup.py  test_bad_format.py
.github/workflows/: ci.yml
prism_ole_handler/: __init__.py
prism_ole_handler/cli/: __init__.py  extract.py  insert.py
prism_ole_handler/core/: __init__.py  extractor.py  inserter.py
prism_ole_handler/test/: test_01.prism
prism_ole_handler/utils/: __init__.py
scripts/: install-hooks.sh
test/: empty.pptx  test_01.pptx
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_inserter.py  test_ole_builder.py
