[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-ole-handler"
version = "0.1.0"
authors = [
    {name = "B. Arman Aksoy", email = "arman@aksoy.org"},
]
description = "Extract and insert GraphPad PRISM objects from Microsoft Office documents (PowerPoint, Word, Excel) on macOS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "olefile>=0.46",
]
keywords = ["prism", "ole", "handler", "microsoft", "office", "powerpoint", "word", "excel", "macos", "graphpad"]

[project.urls]
Homepage = "https://github.com/armish/prism-ole-handler"
"Bug Reports" = "https://github.com/armish/prism-ole-handler/issues"
"Source" = "https://github.com/armish/prism-ole-handler"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
prism-extract = "prism_ole_handler.cli.extract:main"
prism-insert = "prism_ole_handler.cli.insert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism_ole_handler*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
prism_ole_handler = ["test/*.pptx", "test/*.prism", "test/*.pzfx"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''